# fromenv

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
fromenv/: __init__.py  consts.py  errors.py  model.py
fromenv/internal/: dicts.py  loaders.py  tuples.py  types.py  value.py
fromenv/internal/helpers/: data_classes.py  dicts.py  optionals.py  tuples.py  types.py
tests/: test_any_length_tuples.py  test_default_disambiguation.py  test_defaults.py  test_fromenv.py  test_lists.py
