[tool.poetry]
name = "fromenv"
version = "0.1.0"
description = ""
authors = ["Stepan Anokhin <stepan.anokhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
flake8 = "^7.0.0"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
