[tool.poetry]
name = "fromenv"
version = "0.1.0"
description = ""
authors = ["Stepan Anokhin <stepan.anokhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]
flake8 = { version = "^7.0.0", python = ">=3.8.1" }
black = { version = "24.4.0", python = "^3.8" }
pytest = { version = ">=8.1.1", python = "^3.8" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
